add simpleaudio wheel for windows

--- a/02-Synthèse_de_Fourier.ipynb
+++ b/02-Synthèse_de_Fourier.ipynb
@@ -5,7 +5,7 @@
    "id": "1986c188",
    "metadata": {},
    "source": [
-    "V1.0 - 2023-06-10"
+    "V1.1 - 2023-10-26"
    ]
   },
   {
@@ -101,8 +101,7 @@
     "\n",
     "Le module `utils` présent dans le dossier `tools` définit :\n",
     "- la fonction `play` qui prend en argument un nom de fichier WAV et le joue sur la carte son de ton ordinateur en utilisant des fonctions du module __simpleaudio__,\n",
-    "- la fonction `plot_sig_ech` (utilisée dans le premier TP) pour tracer l'allure temporelle d'un signal.\n",
-    "- la fonction `plot_spectre_amplitude` (utilisée dans le premier TP) pour tracer le spectre d'amplitude d'un signal."
+    "- la fonction `plot_sig_ech` (utilisée dans le premier TP) pour tracer l'allure temporelle d'un signal :"
    ]
   },
   {
@@ -113,6 +112,53 @@
    "outputs": [],
    "source": [
     "from tools.utils import play, plot_sig_ech, plot_spectre_amplitude"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ae427dd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- Le contenu d'un fichier WAV est reproduit acoustiquement grâce aux fonctions du module __simpleaudio__.\n",
+    "\n",
+    "#### [Windows] : avec un ordinateur sous Windows tu dois exécuter la cellule ci-dessous pour installer la version binaire du module __simpleaudio__ pour windows :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb1b93d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --no-deps 'module-simpleaudio/simpleaudio-1.0.4-cp310-cp310-win_amd64.whl'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a7b398",
+   "metadata": {},
+   "source": [
+    "#### [macOS/Linux] : avec un ordinateur sous macOs ou Linux tu dois exécuter la cellule ci-dessous pour installer le module __simpleaudio__:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c96a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install simpleaudio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41fffe25",
+   "metadata": {},
+   "source": [
+    "[top](#top)"
    ]
   },
   {
@@ -136,7 +182,7 @@
    "id": "fd8269e2",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Utiliser la fonction `play` pour écouter les fichiers du dossier WAV mentionnés dans la liste `liste_WAV` ci-dessous, qui contiennent chacun un enregistrement de la note __A4__  (note _La_ à 440 Hz) produit par un piano, une guitare et un clavecin :</span>"
+    "<span style=\"color:Green\">Utiliser la fonction `play` pour écouter les fichiers du dossier WAV mentionnés dans la liste `liste_WAV` ci-dessous, qui contiennent chacun un enregistrement de la note __A4__  (note _La_ à 440 Hz) produit par un piano et un clavecin :</span>"
    ]
   },
   {
@@ -183,8 +229,8 @@
    "source": [
     "<h3 style=\"color:brown\">Points d'intérêt</h3>\n",
     "\n",
-    "- <span style=\"color:brown\">les différents sons ont la même __hauteur__ : la hauteur d'un son est déterminée par la fréquence de la raie du fondamental dans le spectre de raies.</spawn>\n",
-    "- <span style=\"color:brown\">Les sons éoutés ont un __timbre__ différent : le timbre est ce qui fait qu'on distingue un son de piano, de trompette, de harpe... ou une voix humaine parmis d'autres. \n",
+    "- <span style=\"color:brown\">les différents sons ont la même __hauteur__ : la hauteur d'un son est déterminée par la fréquence de la raie du fondamental dans le spectre du son.</spawn>\n",
+    "- <span style=\"color:brown\">Les sons écoutés ont un __timbre__ différent : le timbre est ce qui fait qu'on distingue un son de piano, de trompette, de harpe... ou une voix humaine parmis d'autres voix. \n",
     "Le __timbre__ d'un son est déterminé par les __amplitudes des raies harmoniques__ contenues dans le spectre du son.\n",
     "</spawn>"
    ]
@@ -202,11 +248,11 @@
    "id": "870a0a53",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Utiliser la fonction `wav_read` (si besoin, l'aide sur la fonction `wav_read` est [ici](tools/scipy_wav.ipynb#wav_read)) pour lire les fichiers du dossier WAV. Le tableau __ndarray__ des valeurs lues possède 2 colonnes : voie Gauche et voie Droite.</spawn><br>\n",
+    "<span style=\"color:Green\">Utiliser la fonction `wav_read` pour lire les fichiers du dossier WAV (si besoin, l'aide sur la fonction `wav_read` est [ici](tools/scipy_wav.ipynb#wav_read)). Le tableau __ndarray__ des valeurs lues possède 2 colonnes : voie Gauche et voie Droite.</spawn><br>\n",
     "\n",
     "<span style=\"color:Green\">Tracer l'allure temporelle des signaux avec la fonction `plot_sig_ech` du module `tools` en lui passant :<br>\n",
     "    - les _arguments positionnels_ : période d'échantillonnage et tableau des valeurs lues<br>\n",
-    "    - l'_arguments nommé_ `title=\"titre bien choisi !\"`.</spawn> "
+    "    - l'_argument nommé_ `title=\"titre bien choisi !\"`.</spawn> "
    ]
   },
   {
@@ -261,8 +307,8 @@
    "source": [
     "#### Fréquence d'échantilonnage\n",
     "\n",
-    "- <span style=\"color:Green\">Vérifier que la fréquence d'échantilonnage des sons lus est la même, est égale à 44100 Hz.</spawn>\n",
-    "- <span style=\"color:Green\">Nommer `Fe` cette fréquence d'échantillonnage, et `Te` la période d'échantilonnage associée.</spawn>"
+    "- <span style=\"color:Green\">Vérifier simplement que la fréquence d'échantilonnage des sons lus est la même, égale à 44100 Hz.</spawn>\n",
+    "- <span style=\"color:Green\">Nommer `Fe` la fréquence d'échantillonnage, et définir `Te` la période d'échantilonnage associée.</spawn>"
    ]
   },
   {
@@ -302,7 +348,7 @@
     "    \n",
     "<span style=\"color:Green\">La fonction `plot_spectre_amplitude` appelée avec l'argument `plot_harmonic=(n1, n2)` renvoit la liste des fréquences et la liste des amplitudes des `n1` harmoniques trouvées. Le paramètre `n2` indique le nombre de points pris en compte de part et d'autre de la position théorique des harmoniques pour trouver la raie d'amplitude maximale correspondant aux harmoniques réellement présentes.</spawn>\n",
     "\n",
-    "<span style=\"color:Green\">Pour la suite du TP, il est utile de donner un nom aux deux listes renvoyées par la fonction `plot_spectre_amplitude` : par exemple `freq_p` et `pic_p` pour le cas du son de piano.</spawn>\n"
+    "<span style=\"color:Green\">Pour la suite du TP, il est utile de donner un nom aux deux listes renvoyées par la fonction `plot_spectre_amplitude` : par exemple `freq_p` et `pic_p` pour le son de piano, et `freq_c` et `pic_c` pour le clavecin.</spawn>"
    ]
   },
   {
@@ -349,7 +395,7 @@
    "id": "5df7165a",
    "metadata": {},
    "source": [
-    "## 3 $-$ Créer un son pur (sinusoïdal) et modifier son timbre<a name=\"2\"></a>"
+    "## 3 $-$ Créer un son pur (sinusoïdal) et modifier son timbre<a name=\"3\"></a>"
    ]
   },
   {
@@ -512,7 +558,7 @@
    "source": [
     "Pour obtenir le rendu sonore, on écrit les valeurs du signal `sin440` dans un fichier WAV que l'on peut ensuite jouer avec la fonction `play`.\n",
     "\n",
-    "Les valeurs écrites dans un fichier WAV seront des entiers sur 2 octets (16 bits) correspondant au type `np.int16`. L'expression `np.iinfo(np.int16)` montre les valeurs min et max d'un entier `np.int16` :"
+    "Les valeurs écrites dans un fichier WAV doivent être des entiers sur 2 octets (16 bits) correspondant au type `np.int16`. L'expression `np.iinfo(np.int16)` montre les valeurs min et max d'un entier `np.int16` :"
    ]
   },
   {
@@ -606,7 +652,7 @@
    "id": "59e4dbe2",
    "metadata": {},
    "source": [
-    "- <span style=\"color:Green\">Écrire le signal `sin440_w` dans le fichier `sin440_w.wav` puis écouter le fichier WAV obtenu.</spawn>"
+    "- <span style=\"color:Green\">Comment précédemment, écrire le signal `sin440_w` multiplié par `amplitude` dans le fichier `\"sin440_w.wav\"` puis écouter le fichier WAV obtenu.</spawn>"
    ]
   },
   {
@@ -625,7 +671,7 @@
     "<h3 style=\"color:brown\">Points d'intérêt</h3>\n",
     "\n",
     "- <span style=\"color:brown\"> L'attaque et la décroissance de ce signal font bien penser au son produit par un instrument à corde pincée ou frappée</spawn>\n",
-    "- <span style=\"color:brown\"> Mais le timbre n'est pas celui d'un piano, d'une guitare ou d'un clavecin.....</spawn>"
+    "- <span style=\"color:brown\"> Mais le timbre n'est pas celui d'un piano ou d'un clavecin.....</spawn>"
    ]
   },
   {
@@ -716,7 +762,7 @@
    "id": "3fb8dc2f",
    "metadata": {},
    "source": [
-    "<span style=\"color:Green\">Multiplier `sin440_p` par `np.iinfo(np.int16).max`, pupuissi par l'enveloppe `weight(t_ech, 5e-3, 3)` et enregistrer le signal obtenu dans le fichier `sin440_p.wav`.</spawn>"
+    "<span style=\"color:Green\">Multiplier `sin440_p` par `np.iinfo(np.int16).max`, puis par l'enveloppe `weight(t_ech, 5e-3, 3)` et enregistrer le signal obtenu dans le fichier `sin440_p.wav`.</spawn>"
    ]
   },
   {
@@ -735,7 +781,7 @@
     "<span style=\"color:Green\">Jouer successivement :</spawn>\n",
     "- <span style=\"color:Green\">le son original du piano (`WAV/A4-piano-2s.wav`),</spawn>\n",
     "- <span style=\"color:Green\">le son sinus pur avec l'enveloppe temporelle (`sin440_w.wav`),</spawn>\n",
-    "- <span style=\"color:Green\">le son créé par synthèse de Fourier (`in440_p.wav`) :</spawn>"
+    "- <span style=\"color:Green\">le son créé par synthèse de Fourier (`sin440_p.wav`) :</spawn>"
    ]
   },
   {
@@ -808,7 +854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -822,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
