Fix simpleaudio error

--- a/02-Synthèse_de_Fourier.ipynb
+++ b/02-Synthèse_de_Fourier.ipynb
@@ -5,7 +5,7 @@
    "id": "1986c188",
    "metadata": {},
    "source": [
-    "V1.1 - 2023-10-26"
+    "V1.2 - 2023-11-10"
    ]
   },
   {
@@ -17,15 +17,9 @@
     "\n",
     "## [1 $-$ Présentation du TP](#1)\n",
     "## [2 $-$ Écoute, visualisation et analyse de sons issus de fichiers WAV](#2)\n",
-    "## [3 $-$ Création/modification de sons](#3)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13d9da10",
-   "metadata": {},
-   "source": [
-    "Import des modules Pyton nécessaires au TP :"
+    "## [3 $-$ Création/modification de sons](#3)\n",
+    "\n",
+    "<br>"
    ]
   },
   {
@@ -40,6 +34,16 @@
     "from numpy.fft import rfft         # rfft : FFT d'un signal à valeurs réelles\n",
     "from math import pi\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd15d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.utils import plot_sig_ech, plot_spectre_amplitude"
    ]
   },
   {
@@ -78,8 +82,7 @@
     "### Modules spécifiques\n",
     "\n",
     "- Les échantillons sonores sont manipulés sous la forme de tableaux __ndarray__ du module __numpy__ contenant les valeurs échantillonnées du son.\n",
-    "- On utilise le module __scipy.io.wavfile__ qui propose les fonctions `read` et `write` pour lire ou écrire un fichier WAV.\n",
-    "- Le contenu d'un fichier WAV est reproduit acoustiquement grâce aux fonctions du module __simpleaudio__."
+    "- On utilise le module __scipy.io.wavfile__ qui propose les fonctions `read` et `write` pour lire ou écrire un fichier WAV."
    ]
   },
   {
@@ -94,35 +97,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdaa2e9f",
-   "metadata": {},
-   "source": [
-    "### Fonctions utiles au TP\n",
-    "\n",
-    "Le module `utils` présent dans le dossier `tools` définit :\n",
-    "- la fonction `play` qui prend en argument un nom de fichier WAV et le joue sur la carte son de ton ordinateur en utilisant des fonctions du module __simpleaudio__,\n",
-    "- la fonction `plot_sig_ech` (utilisée dans le premier TP) pour tracer l'allure temporelle d'un signal :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35cea10a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tools.utils import play, plot_sig_ech, plot_spectre_amplitude"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7ae427dd",
    "metadata": {},
    "source": [
     "\n",
     "- Le contenu d'un fichier WAV est reproduit acoustiquement grâce aux fonctions du module __simpleaudio__.\n",
     "\n",
-    "#### [Windows] : avec un ordinateur sous Windows tu dois exécuter la cellule ci-dessous pour installer la version binaire du module __simpleaudio__ pour windows :"
+    "#### [Windows] : un ordinateur sous Windows il faut exécuter la cellule ci-dessous pour installer la version binaire du module __simpleaudio__ pour windows"
    ]
   },
   {
@@ -132,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --no-deps 'module-simpleaudio/simpleaudio-1.0.4-cp310-cp310-win_amd64.whl'"
+    "!pip install --no-deps \"module-simpleaudio/simpleaudio-1.0.4-cp310-cp310-win_amd64.whl\""
    ]
   },
   {
@@ -140,7 +121,7 @@
    "id": "19a7b398",
    "metadata": {},
    "source": [
-    "#### [macOS/Linux] : avec un ordinateur sous macOs ou Linux tu dois exécuter la cellule ci-dessous pour installer le module __simpleaudio__:"
+    "#### [macOS/Linux] : avec un ordinateur sous macOs ou Linux il faut exécuter la cellule ci-dessous pour installer le module __simpleaudio__"
    ]
   },
   {
@@ -151,6 +132,35 @@
    "outputs": [],
    "source": [
     "!pip install simpleaudio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f81519c1",
+   "metadata": {},
+   "source": [
+    "### Fonction utile au TP\n",
+    "\n",
+    "La cellule ci-dessous définit la fonction `play` qui prend en argument un nom de fichier WAV et le joue sur la carte son de ton ordinateur en utilisant des fonctions du module __simpleaudio__.<br>\n",
+    "Si le module Python __simpleaudio__ est bien installé dans ton EVP __minfo__ la cellule suivante ne doit pas générer d'erreur : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0bbf68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import simpleaudio as sa\n",
+    "\n",
+    "def play(WAV_file):\n",
+    "    '''\n",
+    "    Plays the sound of the given WAV file.\n",
+    "    '''\n",
+    "    wave_obj = sa.WaveObject.from_wave_file(WAV_file)\n",
+    "    play_obj = wave_obj.play()\n",
+    "    play_obj.wait_done()  # Wait until sound has finished playing\n"
    ]
   },
   {
@@ -868,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
