--- a/02-Synthèse_de_Fourier_solutions.ipynb
+++ b/02-Synthèse_de_Fourier_solutions.ipynb
@@ -5,7 +5,7 @@
    "id": "22c78460",
    "metadata": {},
    "source": [
-    "V1.1 - 2023-10-26"
+    "V1.2 - 2023-11-10"
    ]
   },
   {
@@ -18,14 +18,6 @@
     "## [1 $-$ Présentation du TP](#1)\n",
     "## [2 $-$ Écoute, visualisation et analyse de sons issus de fichiers WAV](#2)\n",
     "## [3 $-$ Création/modification de sons](#3)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b62694d2",
-   "metadata": {},
-   "source": [
-    "Import des modules Pyton nécessaires au TP :"
    ]
   },
   {
@@ -43,6 +35,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ad5b2983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.utils import plot_sig_ech, plot_spectre_amplitude"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d4b43f9f",
    "metadata": {},
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "53bafbfd",
    "metadata": {},
    "outputs": [],
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fd53e541",
    "metadata": {},
    "outputs": [],
@@ -113,8 +115,7 @@
      "output_type": "stream",
      "text": [
       "Processing c:\\users\\charles\\tp_eea_analysespectrale\\module-simpleaudio\\simpleaudio-1.0.4-cp310-cp310-win_amd64.whl\n",
-      "Installing collected packages: simpleaudio\n",
-      "Successfully installed simpleaudio-1.0.4\n"
+      "simpleaudio is already installed with the same version as the provided wheel. Use --force-reinstall to force an installation of the wheel.\n"
      ]
     }
    ],
@@ -145,30 +146,28 @@
    "id": "656d227a",
    "metadata": {},
    "source": [
-    "### Fonctions utiles au TP\n",
+    "### Fonction utile au TP\n",
     "\n",
-    "Le module `utils` présent dans le dossier `tools` définit :\n",
-    "- la fonction `play` qui prend en argument un nom de fichier WAV et le joue sur la carte son de ton ordinateur en utilisant des fonctions du module __simpleaudio__,\n",
-    "- la fonction `plot_sig_ech` (utilisée dans le premier TP) pour tracer l'allure temporelle d'un signal.\n",
-    "- la fonction `plot_spectre_amplitude` (utilisée dans le premier TP) pour tracer le spectre d'amplitude d'un signal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9ad45679",
-   "metadata": {},
-   "source": [
+    "La cellule ci-dessous définit la fonction `play` qui prend en argument un nom de fichier WAV et le joue sur la carte son de ton ordinateur en utilisant des fonctions du module __simpleaudio__.<br>\n",
     "Si le module Python __simpleaudio__ est bien installé dans ton EVP __minfo__ la cellule suivante ne doit pas générer d'erreur : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0946cee8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tools.utils import play, plot_sig_ech, plot_spectre_amplitude"
+    "import simpleaudio as sa\n",
+    "\n",
+    "def play(WAV_file):\n",
+    "    '''\n",
+    "    Plays the sound of the given WAV file.\n",
+    "    '''\n",
+    "    wave_obj = sa.WaveObject.from_wave_file(WAV_file)\n",
+    "    play_obj = wave_obj.play()\n",
+    "    play_obj.wait_done()  # Wait until sound has finished playing\n"
    ]
   },
   {
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "015afa27",
    "metadata": {},
    "outputs": [
@@ -205,7 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function play in module tools.utils:\n",
+      "Help on function play in module __main__:\n",
       "\n",
       "play(WAV_file)\n",
       "    Plays the sound of the given WAV file.\n",
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "83801a1a",
    "metadata": {},
    "outputs": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cc13f862",
    "metadata": {},
    "outputs": [],
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "82fb52f7",
    "metadata": {},
    "outputs": [],
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1e6edd22",
    "metadata": {},
    "outputs": [
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6b5e051d",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "50422085",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3985f87b",
    "metadata": {},
    "outputs": [
@@ -2387,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "4c9a15db",
    "metadata": {},
    "outputs": [],
@@ -2422,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "5a3a75b9",
    "metadata": {},
    "outputs": [
@@ -2453,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d540cc9e",
    "metadata": {
     "scrolled": false
@@ -3490,7 +3489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "53a9bbcd",
    "metadata": {},
    "outputs": [
@@ -4564,7 +4563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "34f077e2",
    "metadata": {},
    "outputs": [
@@ -4600,7 +4599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ce09317a",
    "metadata": {},
    "outputs": [],
@@ -4633,7 +4632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "292c144d",
    "metadata": {},
    "outputs": [],
@@ -4656,7 +4655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d738baae",
    "metadata": {},
    "outputs": [
@@ -4686,7 +4685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "edccc284",
    "metadata": {},
    "outputs": [],
@@ -4712,7 +4711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "5cb28b3d",
    "metadata": {},
    "outputs": [
@@ -5749,7 +5748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "a34378a1",
    "metadata": {},
    "outputs": [
@@ -5759,7 +5758,7 @@
        "iinfo(min=-32768, max=32767, dtype=int16)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5782,7 +5781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "a8c96a06",
    "metadata": {},
    "outputs": [],
@@ -5794,7 +5793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "a92e2316",
    "metadata": {},
    "outputs": [],
@@ -5836,7 +5835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "0f77e419",
    "metadata": {},
    "outputs": [],
@@ -5861,7 +5860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "3cd441f9",
    "metadata": {},
    "outputs": [],
@@ -5871,7 +5870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "d2bd63ae",
    "metadata": {},
    "outputs": [
@@ -6887,7 +6886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "2b29df79",
    "metadata": {},
    "outputs": [],
@@ -6899,7 +6898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "716e108b",
    "metadata": {},
    "outputs": [],
@@ -6971,7 +6970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "c4e1e0ed",
    "metadata": {},
    "outputs": [],
@@ -7005,7 +7004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "dba3d679",
    "metadata": {},
    "outputs": [],
@@ -7024,7 +7023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "52c1a451",
    "metadata": {},
    "outputs": [],
@@ -7047,7 +7046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "495a080a",
    "metadata": {},
    "outputs": [],
@@ -7057,7 +7056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "432ab717",
    "metadata": {},
    "outputs": [],
@@ -7067,7 +7066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "52cdaf89",
    "metadata": {},
    "outputs": [],
@@ -7093,7 +7092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "c498d3d7",
    "metadata": {},
    "outputs": [],
@@ -7112,7 +7111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "88a945d9",
    "metadata": {},
    "outputs": [],
@@ -7135,7 +7134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "5f3c8062",
    "metadata": {},
    "outputs": [],
@@ -7145,7 +7144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "f446919d",
    "metadata": {},
    "outputs": [],
@@ -7170,14 +7169,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dccf0a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -7196,7 +7187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
